--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-shared-devices-modal/osd-shared-devices-modal.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-shared-devices-modal/osd-shared-devices-modal.component.html
@@ -41,7 +41,8 @@
     <cd-submit-button *ngIf="!viewing"
                       (submitAction)="onSubmit()"
                       i18n="form action button|Example: Create Pool@@formActionButton"
-                      [form]="formGroup">{{ action | titlecase }}</cd-submit-button>
+                      [form]="formGroup"
+                      [disabled]="!isFiltered">{{ action | titlecase }}</cd-submit-button>
     <cd-back-button [back]="bsModalRef.hide"></cd-back-button>
   </div>
 </form>
