--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/inventory/inventory.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/inventory/inventory.component.html
@@ -15,17 +15,7 @@
                 forceIdentifier="true"
                 columnMode="flex"
                 (fetchData)="getInventory($event)"
-                selectionType="single"
-                (updateSelection)="updateSelection($event)">
-        <div class="table-actions btn-toolbar">
-          <!-- TODO: correct permission? HOST or OSD? -->
-          <cd-table-actions [permission]="permissions.osd"
-                            [selection]="selection"
-                            class="btn-group"
-                            id="inventory-actions"
-                            [tableActions]="tableActions">
-          </cd-table-actions>
-        </div>
+                selectionType="single">
       </cd-table>
     </div>
   </div>
