reuse inventory device

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/host-details/host-details.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/host-details/host-details.component.html
@@ -3,7 +3,8 @@
        heading="Inventory"
        *ngIf="permissions.hosts.read">
     <cd-inventory
-      [hostname]="selection.first()['hostname']">
+      [hostname]="selection.first()['hostname']"
+      hideHostname="true">
     </cd-inventory>
   </tab>
   <tab i18n-heading
