--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/inventory/inventory.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/inventory/inventory.component.html
@@ -9,14 +9,9 @@
   <legend i18n>Devices</legend>
   <div class="row">
     <div class="col-md-12">
-      <cd-table [data]="devices"
-                [columns]="columns"
-                identifier="uid"
-                forceIdentifier="true"
-                columnMode="flex"
-                (fetchData)="getInventory($event)"
-                selectionType="single">
-      </cd-table>
+      <cd-inventory-devices [devices]="devices"
+                            [hiddenColumns]="hostname === undefined ? [] : ['hostname']">
+      </cd-inventory-devices>
     </div>
   </div>
 </ng-container>
